# wei

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  build.rs
.cargo/: config.toml
.github/workflows/: schedule.yml  windows.yml
res/: README.md  time  wei.icns
src/: lib.rs  main.rs
