[package]
name = "wei"
version = "0.2.2"
edition = "2021"
description = "wei system"
documentation = "https://github.com/zuiyue-com/wei"
homepage = "https://github.com/zuiyue-com/wei"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
wei-run = "0.1.23"
wei-daemon = "0.2.20"
# wei-run = { path = "../wei-run" }
# wei-daemon = { path = "../wei-daemon" }
wei-env = "0.2.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
single-instance = "0.3"
sha2 = "0.10.7"