[package]
name = "wei"
version = "0.2.5"
edition = "2021"
description = "wei system"
documentation = "https://github.com/zuiyue-com/wei"
homepage = "https://github.com/zuiyue-com/wei"
license = "MIT OR Apache-2.0"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "WEI.EXE"
LegalCopyright = "Copyright © 2023 ZUIYUE.COM"
FileDescription = "WEI SYSTEM"
ProductName = "WEI" 
ProductVersion = "0.2.5"

[package.metadata.windows]
subsystem = "windows"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'

[dependencies]
wei-run = "0.2.2"
wei-log = "0.2.5"
wei-env = "0.2.10"
single-instance = "0.3"
winapi = { version = "0.3", features = ["winbase"] }
