[package]
name = "wei"
version = "0.2.5"
edition = "2021"
description = "wei system"
documentation = "https://github.com/zuiyue-com/wei"
homepage = "https://github.com/zuiyue-com/wei"
license = "MIT OR Apache-2.0"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "WEI.EXE"
LegalCopyright = "Copyright © 2023 ZUIYUE.COM"
FileDescription = "WEI SYSTEM"
ProductName = "WEI" 
ProductVersion = "1.0.0"

[package.metadata.windows]
subsystem = "windows"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'

[dependencies]
wei-run = "0.3.1"
wei-log = "0.2.10"
wei-env = "0.2.13"
wei-single = "0.3"

wei-windows = { path = "../wei-windows"}

winapi = { version = "0.3", features = ["winbase", "shellapi"] }
tokio = { version = "1", features = ["full"] }

tauri-winrt-notification = "0.1.3"
os_info = "3.7.0"

ureq = "2.9.6"